--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,37 @@ body {
     font-weight: bold;
 }
 
+/* INITIAL MESSAGE */
+
+.initial_message {
+    background-color: rgba(255, 255, 255, 0.65);
+    border: 1px solid black;
+    border-radius: 10px;
+    display: flex;
+    flex-flow: column;
+    height: 150px;
+    justify-content: space-around;
+    padding: 10px;
+    position: absolute;
+    text-align: justify;
+    width: 80%;
+    z-index: 2;
+}
+
+.initial_message button {
+    background-color: yellowgreen;
+    border-radius: 10px;
+    color: white;
+    font-size: 1.4rem;
+    font-weight: bold;
+    padding: 12px;
+}
+
+.initial_message button:active {
+    background-color: black;
+    color: orange;
+}
+
 /* GAME */
 
 .game {
